# Agentic-Duo

./: .gitignore  README.md  automaintainer_env_deep_dive.md  requirements.txt
agenticduo/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
agenticduo/openenv_agenticduo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agenticduo/server/: Dockerfile  __init__.py  agenticduo_environment.py  app.py
automaintainer-env/: .env.example  Dockerfile  README.md  environment.py  graders.py  index.html  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
automaintainer-env/server/: app.py
automaintainer-env/tasks/easy/: .issues.json  math_utils.py  test_math_utils.py
automaintainer-env/tasks/extreme/: .issues.json  server.py
automaintainer-env/tasks/hard/: .issues.json  api.py  database.py  test_api.py
automaintainer-env/tasks/medium/: .issues.json  app.py  config.py  test_app.py
